// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render add to cart if in stock 1`] = `
<button
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  <span>
    ADD TO CART
  </span>
</button>
`;

exports[`should render out of cart if not in stock 1`] = `
<button
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <span>
    OUT OF STOCK
  </span>
</button>
`;

exports[`should render properly 1`] = `
<button
  disabled={false}
  onClick={[MockFunction handleAddToCart]}
  type="button"
>
  <span>
    ADD TO CART
  </span>
</button>
`;
